Refactor validation loss notebook: update variable names and execution counts for clarity

--- a/Udacity/Course 7 - HW Transformers/2_validation_loss_starter.ipynb
+++ b/Udacity/Course 7 - HW Transformers/2_validation_loss_starter.ipynb
@@ -667,7 +667,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -676,30 +676,32 @@
     "tokenized_text = tokenizer.encode(text).to(device)\n",
     "\n",
     "# TODO: Get number of tokens in the training dataset. Should be train_split * number_of_tokens\n",
-    "train_tokens_num = int(len(tokenized_text) * train_split)\n",
+    "train_tokens_number = int(len(tokenized_text) * train_split)\n",
     "\n",
     "\n",
     "\n",
     "# TODO: Split data into training and validation datasets\n",
-    "train_dataset = TokenIdsDataset(tokenized_text[:train_tokens_num], config[\"context_size\"])\n",
-    "validation_dataset = TokenIdsDataset(tokenized_text[train_tokens_num:], config[\"context_size\"])\n"
+    "training_dataset = TokenIdsDataset(tokenized_text[:train_tokens_number], config[\"context_size\"])\n",
+    "validation_dataset = TokenIdsDataset(tokenized_text[train_tokens_number:], config[\"context_size\"])\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Step 2 - Create Validation Dataset\n",
     "\n",
-    "train_dataset = TokenIdsDataset(train_data, config[\"context_size\"])\n",
-    "# TODO: Create a validation dataset from the validation data"
+    "training_dataset = TokenIdsDataset(training_dataset, config[\"context_size\"])\n",
+    "\n",
+    "# TODO: Create a validation dataset from the validation data\n",
+    "validation_dataset = TokenIdsDataset(validation_dataset, config[\"context_size\"])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -708,14 +710,15 @@
     "from torch.utils.data import Dataset, DataLoader, RandomSampler\n",
     "\n",
     "train_sampler = RandomSampler(\n",
-    "    train_dataset, num_samples=batch_size * train_iterations, replacement=True\n",
+    "    training_dataset, num_samples=batch_size * train_iterations, replacement=True\n",
     ")\n",
     "train_dataloader = DataLoader(\n",
-    "    train_dataset, batch_size=batch_size, sampler=train_sampler\n",
+    "    training_dataset, batch_size=batch_size, sampler=train_sampler\n",
     ")\n",
     "\n",
     "validation_sampler = RandomSampler(validation_dataset, replacement=True)\n",
-    "# TODO: Create validation data loader"
+    "# TODO: Create validation data loader\n",
+    "validation_dataloader = DataLoader(validation_dataset, batch_size=batch_size, sampler=validation_sampler)"
    ]
   },
   {
@@ -735,16 +738,31 @@
     "    total_loss = 0\n",
     "\n",
     "    # TODO: Create an iterator for the validation data loader\n",
+    "    validation_iter = iter(validation_dataloader)\n",
     "\n",
     "    for _ in range(batches_num):\n",
     "        idx, targets = next(validation_iter)\n",
     "        logits = model(idx)\n",
     "\n",
     "        # TODO: Call \"next\" function to get input and targets from the iterator\n",
+    "        # Note: Move the input and targets to the device if available  \n",
+    "        idx = idx.to(device)\n",
+    "        targets = targets.to(device)\n",
+    "\n",
     "        # TODO: Using the model compute logits given the input\n",
+    "        # Note: You should use the \"view\" method to reshape the logits and targets\n",
+    "        # so they could be used with the \"cross_entropy\" function\n",
+    "        logits = logits.view(-1, logits.size(-1))\n",
+    "        targets = targets.view(-1)\n",
+    "        \n",
     "\n",
     "        # TODO: Use the \"view\" method to convert logits and targets so we could use the \"cross_entropy\" function\n",
     "        # It should be similar to how we do it in the training code\n",
+    "        # Note: You should use the \"view\" method to reshape the logits and targets\n",
+    "        # so they could be used with the \"cross_entropy\" function\n",
+    "\n",
+    "\n",
+    "            \n",
     "\n",
     "        # TODO: calculate cross entropy using logits and target data\n",
     "\n",
@@ -834,6 +852,7 @@
     "\n",
     "    validation_loss = calculate_validation_loss(model, batches_num=10)\n",
     "    # TODO: Append validation loss\n",
+    "    \n",
     "    # TODO: Append validation step\n",
     "\n",
     "    print(f\"Step {step_num}. Validation loss: {validation_loss:.3f}\")\n",
