Add initial text generation notebook with CUDA support and TODOs for implementation

--- a/Udacity/Course 7 - HW Transformers/2_validation_loss_starter.ipynb
+++ b/Udacity/Course 7 - HW Transformers/2_validation_loss_starter.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {
     "id": "CMWMOaDg-ZBv"
    },
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {
     "id": "IwwOe-tJ-xcE"
    },
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {
     "id": "Ap_Ixr0M-0Yv"
    },
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {
     "id": "T3q9Dj3l-2Ja"
    },
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {
     "id": "Lb1zImZr-4mY"
    },
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {
     "id": "MlTEiIqs-7Uz"
    },
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {
     "id": "7Qal76ig-94U"
    },
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -302,7 +302,7 @@
        "torch.Size([8, 256, 64])"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -338,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -347,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -356,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -365,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -374,7 +374,7 @@
        "torch.Size([8, 256, 768])"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -385,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -407,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -416,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -425,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -434,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -443,7 +443,7 @@
        "torch.Size([8, 256, 768])"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -454,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -481,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -490,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -499,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -508,7 +508,7 @@
        "torch.Size([8, 256, 768])"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -519,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -558,7 +558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -567,7 +567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -576,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -585,7 +585,7 @@
        "torch.Size([1, 2, 65])"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -596,7 +596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -619,7 +619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -633,16 +633,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "\"First Citizen:\\nTiFVgJ?vFgEsEg&B:MnT:DUhiXXrr:ZK!fBCzI$,JDd?qhdzlaTkXj '\\nDsIz-.aW;NFc;\\nRtTAE'3SoBXfXTaArj-pRrY\\nOzGAW\""
+       "'First Citizen:\\nMOLi-Z;Y-mEXaNzhu.JNxL:ptlYFW\\n!Pqc?hs:gejvbxbveLysFOiJb.eSM$;FjBJT!O3VP.CUl;DpbwwwbXPbv?Sm3VuDfaHHdD'"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -653,7 +653,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -667,7 +667,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -681,27 +681,31 @@
     "\n",
     "\n",
     "# TODO: Split data into training and validation datasets\n",
-    "training_dataset = TokenIdsDataset(tokenized_text[:train_tokens_number], config[\"context_size\"])\n",
-    "validation_dataset = TokenIdsDataset(tokenized_text[train_tokens_number:], config[\"context_size\"])\n"
+    "# training_dataset = TokenIdsDataset(tokenized_text[:train_tokens_number], config[\"context_size\"])\n",
+    "\n",
+    "\n",
+    "# validation_dataset = TokenIdsDataset(tokenized_text[train_tokens_number:], config[\"context_size\"])\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Step 2 - Create Validation Dataset\n",
     "\n",
-    "training_dataset = TokenIdsDataset(training_dataset, config[\"context_size\"])\n",
+    "# training_dataset = TokenIdsDataset(training_dataset, config[\"context_size\"])\n",
+    "training_dataset = TokenIdsDataset(tokenized_text[:train_tokens_number], config[\"context_size\"])\n",
     "\n",
     "# TODO: Create a validation dataset from the validation data\n",
-    "validation_dataset = TokenIdsDataset(validation_dataset, config[\"context_size\"])"
+    "# validation_dataset = TokenIdsDataset(validation_dataset, config[\"context_size\"])\n",
+    "validation_dataset = TokenIdsDataset(tokenized_text[train_tokens_number:], config[\"context_size\"])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -723,10 +727,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import torch\n",
+    "import torch.nn.functional as F\n",
+    "\n",
     "# Step 4 - Calculate Validation Loss\n",
     "\n",
     "\n",
@@ -754,13 +761,12 @@
     "        # so they could be used with the \"cross_entropy\" function\n",
     "        logits = logits.view(-1, logits.size(-1))\n",
     "        targets = targets.view(-1)\n",
-    "        \n",
+    "\n",
     "\n",
     "        # TODO: Use the \"view\" method to convert logits and targets so we could use the \"cross_entropy\" function\n",
     "        # It should be similar to how we do it in the training code\n",
-    "        # Note: You should use the \"view\" method to reshape the logits and targets\n",
-    "        # so they could be used with the \"cross_entropy\" function\n",
     "\n",
+    "        \n",
     "\n",
     "            \n",
     "\n",
@@ -768,6 +774,7 @@
     "\n",
     "        # TODO: Add loss to the \"total_loss\" variable\n",
     "        # Note: you would need to use the \"item()\" method to convert a tensor to a number\n",
+    "        total_loss += F.cross_entropy(logits, targets, reduction=\"sum\").item()\n",
     "\n",
     "    average_loss = total_loss / batches_num\n",
     "\n",
@@ -776,7 +783,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -787,7 +794,56 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Step 0. Loss 4.364\n",
+      "Demo GPT:\n",
+      "\n",
+      "  o t e   w    u      a     e z        t  m      m             ,           o  n       be  o  s    b \n",
+      "Step 0. Validation loss: 83752.238\n",
+      "Step 1. Loss 4.970\n",
+      "Step 2. Loss 4.373\n",
+      "Step 3. Loss 4.444\n",
+      "Step 4. Loss 4.188\n",
+      "Step 5. Loss 3.581\n",
+      "Step 6. Loss 3.122\n",
+      "Step 7. Loss 2.929\n",
+      "Step 8. Loss 3.008\n",
+      "Step 9. Loss 2.883\n",
+      "Step 10. Loss 2.786\n",
+      "Demo GPT:\n",
+      "\n",
+      "\n",
+      "TouO\n",
+      "Ai b  t fatou herpr  tmER he, aBo ire tr, t\n",
+      "eur t s ou b tirear vat fillarfly  ofi tll :\n",
+      "\n",
+      "Buro\n",
+      "Step 10. Validation loss: 46832.906\n",
+      "Step 11. Loss 2.840\n",
+      "Step 12. Loss 2.834\n",
+      "Step 13. Loss 2.740\n",
+      "Step 14. Loss 2.756\n",
+      "Step 15. Loss 2.744\n",
+      "Step 16. Loss 2.712\n",
+      "Step 17. Loss 2.671\n",
+      "Step 18. Loss 2.659\n",
+      "Step 19. Loss 2.645\n",
+      "Step 20. Loss 2.630\n",
+      "Demo GPT:\n",
+      "\n",
+      "MEurd wigkr as ss the athan, n othe d Wkiwit ave ho iso ash!\n",
+      "Dowhd meg pon ta wit-I ' d:\n",
+      "R\n",
+      "REENAnHe \n",
+      "Step 20. Validation loss: 43194.829\n",
+      "Step 21. Loss 2.625\n"
+     ]
+    }
+   ],
    "source": [
     "# Step 5 - Update the Training Loop\n",
     "\n",
@@ -795,13 +851,14 @@
     "from IPython.display import display, clear_output\n",
     "from matplotlib import pyplot as plt\n",
     "from IPython.display import display\n",
-    "import ipywidgets as widgets\n",
+    "# import ipywidgets as widgets\n",
     "%matplotlib inline\n",
     "\n",
-    "plot_output = widgets.Output()\n",
+    "# plot_output = widgets.Output()\n",
     "\n",
-    "display(plot_output)\n",
+    "# display(plot_output)\n",
     "\n",
+    "'''\n",
     "def update_plot(train_losses, train_steps, validation_losses, validation_steps):\n",
     "\n",
     "  with plot_output:\n",
@@ -814,7 +871,7 @@
     "    plt.legend(loc='center left')\n",
     "    plt.grid(True)\n",
     "    plt.show()\n",
-    "\n",
+    "'''\n",
     "\n",
     "# Set up lists to store losses for plotting\n",
     "train_losses = []\n",
@@ -843,6 +900,9 @@
     "  train_losses.append(loss.item())\n",
     "  train_steps.append(step_num)\n",
     "  # TODO: Append training loss\n",
+    "\n",
+    "\n",
+    "\n",
     "  # TODO: Append training step\n",
     "\n",
     "  print(f\"Step {step_num}. Loss {loss.item():.3f}\")\n",
@@ -852,13 +912,16 @@
     "\n",
     "    validation_loss = calculate_validation_loss(model, batches_num=10)\n",
     "    # TODO: Append validation loss\n",
+    "    eval_losses.append(validation_loss)\n",
+    "    eval_steps.append(step_num)\n",
     "    \n",
     "    # TODO: Append validation step\n",
+    "\n",
     "\n",
     "    print(f\"Step {step_num}. Validation loss: {validation_loss:.3f}\")\n",
     "\n",
     "\n",
-    "  update_plot(train_losses, train_steps, eval_losses, eval_steps)"
+    "  # update_plot(train_losses, train_steps, eval_losses, eval_steps)"
    ]
   },
   {
