Udacity notebook upload

--- a/Udacity/Course 8 - Image classifier/aipnd-project-master/Image Classifier Project.ipynb
+++ b/Udacity/Course 8 - Image classifier/aipnd-project-master/Image Classifier Project.ipynb
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -220,8 +220,8 @@
     "\n",
     "\n",
     "# TODO: Load the datasets with ImageFolder\n",
-    "# test_datasets = datasets.ImageFolder(test_dir, transform=test_transforms)\n",
-    "test_datasets = SequentialFolderDataset(root_dir=test_dir, transform=test_transforms)\n",
+    "test_datasets = datasets.ImageFolder(test_dir, transform=test_transforms)\n",
+    "# test_datasets = SequentialFolderDataset(root_dir=test_dir, transform=test_transforms)\n",
     "\n",
     "# TODO: use the ImageFolder dataset to create the DataLoader\n",
     "# train_dataloader = torch.utils.data.DataLoader(train_datasets, batch_size=32, shuffle=True)\n",
